[metadata]
name = lmirror
summary = Large scale mirror protocol.
description-file =
    README.txt
author = Robert Collins
author-email = robertc@robertcollins.net
home-page = https://launchpad.net/lmirror
classifier =
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    l_mirror

[entry_points]
console_scripts =
    lmirror = l_mirror.main:main
